--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Saludos {{ title }}!
-  </h1>
-  <img width="300" alt="Angular Logo" [src]="logo">
-</div>
 
+<div class="container">
+  <div class="row text-center">
+    <div class="col-10 ">
+      <h1>
+        Saludos {{ title }}!
+      </h1>
+    </div>
+    <div  class="col-2">
+  
+      <img class="img-fluid" width="300" alt="Angular Logo" [src]="logo">
+    </div>
+  </div>
+</div>
 
 <router-outlet></router-outlet>
