--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+body{background-color: aquamarine}
+
+h1{background-color: orange}
