ListaSimple y local storage

--- a/src/app/home/saludo/saludo.component.html
+++ b/src/app/home/saludo/saludo.component.html
@@ -7,3 +7,10 @@
 <button type="button" class="btn btn-info" (click)="btnBorrar()">Borrar</button>
 
 <p>hola {{nombre}}</p>
+
+<div class="mt-3">
+  <h3>Expresiones</h3>
+  <p>La suma de 23 y 34 es {{23 + 34}}</p>
+  <p>El nombre elegido es {{ nombre.toUpperCase() }}</p>
+ <p> {{(nombre === 'pepe')? 'Hola Pepe!': 'Escribe un nombre'}}</p>
+</div>
