--- a/src/app/tareas/tareas.component.html
+++ b/src/app/tareas/tareas.component.html
@@ -1,3 +1,8 @@
-<p>
-  tareas works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <dvt-lista-simple></dvt-lista-simple>
+    </div>
+    
+  </div>
+</div>
