--- a/src/app/tareas/tareas.component.html
+++ b/src/app/tareas/tareas.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <dvt-lista-simple></dvt-lista-simple>
+      <dvt-lista-simple class="col-6"></dvt-lista-simple>
+      <dvt-lista-plus class="col-6"></dvt-lista-plus>
     </div>
     
   </div>
