--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -3,5 +3,7 @@
         <a class="nav-item nav-link active" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link"[routerLink]="['tareas']">Tareas</a>
         <a class="nav-item nav-link" [routerLink]="['about']">About</a>
+        <a class="nav-item nav-link" [routerLink]="['curso']">Cursos</a>
+        <a class="nav-item nav-link" [routerLink]="['blog']">Blog</a>
     </div>
 </nav>
