--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,8 @@
       <dvt-saludo  class="col-6"></dvt-saludo>    
       <dvt-SaludoLocal-local  class="col-6"></dvt-SaludoLocal-local> 
   </div>
+  <div class="row mt-3">
+    <dvt-expresiones class="col-6"></dvt-expresiones>
+    <dvt-pipes class="col-6"></dvt-pipes>
+  </div>
 </div>
