--- a/src/app/tareas/tareas.component.html
+++ b/src/app/tareas/tareas.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
+      <h2 dvtImportant="Importante"></h2>
       <dvt-lista-simple class="col-6"></dvt-lista-simple>
       <dvt-lista-plus class="col-6"></dvt-lista-plus>
     </div>
